@@ -61,7 +61,6 @@ import org.springframework.web.multipart.MultipartFile;
 public class ProductServiceImpl implements ProductService {
   @Autowired private ProductRepository productRepository;
   @Autowired private AllowedProductRepository allowedProductRepository;
-  @Autowired private BranchProductRepository branchProductRepository;
 
   @Autowired private UserService userService;
   @Autowired private ProductCategoryService productCategoryService;
@@ -79,8 +78,6 @@ public class ProductServiceImpl implements ProductService {
   @Autowired private StorageLocationMapper storageLocationMapper;
   @Autowired private UnitConversionMapper unitConversionMapper;
   @Autowired private AllowedProductService allowedProductService;
-  @Autowired private BatchRepository batchRepository;
-  @Autowired private NotificationService notificationService;
 
   @Override
   public Product getById(Long id) {
@@ -89,6 +86,9 @@ public class ProductServiceImpl implements ProductService {
             e ->
                 productRepository
                     .findById(e)
+                    .filter(
+                        product ->
+                            !product.getStatus().equals(ProductStatus.DA_XOA)) // Kiểm tra status
                     .map(b -> productMapper.convertToDTOWithoutProductInBranchProduct(b)))
         .orElse(null);
   }
@@ -482,6 +482,11 @@ public class ProductServiceImpl implements ProductService {
     Sort.Direction direction = Sort.Direction.fromString(sortDirection);
     Pageable pageable = PageRequest.of(pageNo, pageSize, Sort.by(direction, sortBy));
 
+    specification =
+        specification.and(
+            (root, query, criteriaBuilder) ->
+                criteriaBuilder.notEqual(root.get("status"), "DA_XOA"));
+
     // Keyword search for product name, registration code, and active ingredient
     if (keyword.isPresent()) {
       String searchPattern = "%" + keyword.get().toLowerCase() + "%";
@@ -527,6 +532,7 @@ public class ProductServiceImpl implements ProductService {
               (root, query, criteriaBuilder) ->
                   criteriaBuilder.equal(root.get("status"), status.get()));
     }
+
     return productRepository
         .findAll(specification, pageable)
         .map(productMapper::convertToProductBaseDTO);
@@ -689,16 +695,17 @@ public class ProductServiceImpl implements ProductService {
   @Override
   public ByteArrayInputStream exportFile() throws IOException {
     String[] headers = {
-      "Regation Code",
-      "Product Name",
-      "Active Ingredient",
-      "Excipient",
-      "Formulation",
-      "Category",
-      "Type",
-      "Base Unit",
-      "Manufacturer",
-      "Sell Price"
+      "Mã đăng ký",
+      "Tên sản phẩm",
+      "Hoạt chất",
+      "Bào chế",
+      "Tá dược",
+      "Nhóm sản phẩm",
+      "Loại sản phẩm",
+      "Đơn vị cơ sở",
+      "Nhà sản xuất",
+      "Giá nhập",
+      "Giá bán"
     };
 
     // Row mapper to convert a Product object to a list of cell values
@@ -717,6 +724,8 @@ public class ProductServiceImpl implements ProductService {
           cellValues.add(product.getBaseUnit() != null ? product.getBaseUnit() : "");
           cellValues.add(
               product.getManufacturerName() != null ? product.getManufacturerName() : "");
+          cellValues.add(
+              product.getInboundPrice() != null ? product.getInboundPrice().toString() : "");
           cellValues.add(product.getSellPrice() != null ? product.getSellPrice().toString() : "");
 
           return cellValues;
@@ -724,9 +733,18 @@ public class ProductServiceImpl implements ProductService {
 
     // Fetch product data
     List<ProductBaseDTO> products =
-        productRepository.findAll().stream()
-            .map(productMapper::convertToProductBaseDTO)
-            .collect(Collectors.toList());
+        searchProducts(
+                0,
+                Integer.MAX_VALUE,
+                "id",
+                "ASC",
+                Optional.ofNullable(null),
+                Optional.ofNullable(null),
+                Optional.ofNullable(null),
+                Optional.ofNullable(null),
+                Optional.ofNullable(null))
+            .stream()
+            .toList();
 
     // Export data using utility
     try {
@@ -828,6 +846,13 @@ public class ProductServiceImpl implements ProductService {
 
     return productRepository.findProductsBySellPrice(sellPrice, branchId).stream()
         .map(productMapper::convertToProductBaseDTO)
+        .collect(Collectors.toList());
+  }
+
+  @Override
+  public List<ProductBaseDTO> getByKeyword(String keyword) {
+    return productRepository.findProductEntitiesByProductNameIgnoreCase(keyword).stream()
+        .map(productMapper::convertToProductDto)
         .collect(Collectors.toList());
   }
 }
